@@ -3,6 +3,9 @@
         - indentation of </span> tags fixed
         - character entities used in DeReKo are automatically replaced by their corresponding characters
         - resources defined in Makefile
+        - character entities that used in DeReKo are automatically replaced by their corresponding characters
+        - fixed possible IO deadlock with KorAP tokenizer
+
 0.03 2021-01-12
         - Update KorAP-Tokenizer to released 2.0 version
         - Improve test suite for recent version
